fix card title style for internals & ios sidemenu missing margin btm
- updated quiz hud (quiz level + wrong answers) layout, in mobile smaller

--- a/src/app/components/Elements/Elements.scss
+++ b/src/app/components/Elements/Elements.scss
@@ -6,7 +6,7 @@
   }
 
   ion-list {
-    padding: 10px 10px !important;
+    padding: 15px 10px 10px !important;
     background: #2C2E31;
     h1 { padding-left: 0; }
   }
