--- a/src/app/pages/Quiz/Quiz.scss
+++ b/src/app/pages/Quiz/Quiz.scss
@@ -42,7 +42,7 @@
 }
 
 .hud {
-  margin: 30px 0;
+  margin: 0;
   display: flex;
   justify-content: center;
 
@@ -66,9 +66,15 @@
     text-align: center;
     font-size: 1.5rem;
     color: black;
-    padding: 10px;
+    padding: 5px;
     margin: 0;
     width: 120px;
+
+    @include to-xs {
+      font-size: 1.2rem;
+      padding: 2px;
+      width: 100px;
+    }
   }
 
   h1 {
@@ -78,11 +84,19 @@
     padding: 10px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+
+    @include to-xs {
+      padding: 3px;
+    }
   }
 }
 
 .quiz-container {
   margin-top: 40px;
+
+  @include to-xs {
+    margin-top: 0;
+  }
 
   h2 {
     font-size: 1.5em;
@@ -162,6 +176,10 @@
   ion-button {
     margin-top: 20px;
   }
+}
+
+#successAnimation {
+  margin-bottom: -30px;
 }
 
 $circle-length: 300px;
