--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -237,6 +237,10 @@ ion-card + ion-card {
 .quiz-header {
   margin-top: 5px;
   margin-bottom: 20px;
+
+  h1 {
+    text-decoration: underline;
+  }
 }
 
 
@@ -244,7 +248,6 @@ ion-card + ion-card {
 .quiz-header {
 
   h1 {
-    text-decoration: underline;
     padding: 0;
     margin: 0;
 
